2013-02-14  David Trainor  <dtrainor@chromium.org>

        [chromium] No triggering autofill on unfocus
        https://bugs.webkit.org/show_bug.cgi?id=109735

        Reviewed by James Robinson.

        Need to notify the autofill client to not process text changes when we're setting
        focus to false and are trying to commit a composition.

        * public/WebAutofillClient.h:
        (WebAutofillClient):
        (WebKit::WebAutofillClient::setIgnoreTextChanges):
        (WebKit::WebAutofillClient::~WebAutofillClient):
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::setFocus):
        * tests/WebViewTest.cpp:

2013-02-14  Alexandre Elias  <aelias@chromium.org>

        [chromium] Fix scaling in WebViewImpl::handleGestureEvent, second try
        https://bugs.webkit.org/show_bug.cgi?id=109671

        Reviewed by James Robinson.

        My patch 142571 broke a bunch of things in handleGestureEvent that
        assumed the event came in scaled, most notably tap highlight and
        double-tap zoom. Switch those to PlatformGestureEvent.

        142808 was an earlier version of this patch that was reverted
        due to fling events asserting they can't be converted to
        PlatformGestureEvent. This version moves fling earlier in the
        function to avoid that.

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::handleGestureEvent):
        (WebKit::WebViewImpl::bestTapNode):
        (WebKit::WebViewImpl::enableTapHighlight):
        * src/WebViewImpl.h:
        (WebViewImpl):
        * tests/LinkHighlightTest.cpp:
        (WebCore::TEST):

2013-02-14  Dirk Pranke  <dpranke@chromium.org>

        Unreviewed, rolling out r142901.
        http://trac.webkit.org/changeset/142901

        r182258 introduces a dependency on chrome.gyp that breaks the win
        build. Rolling back to r182150 until I can work up a workaround.

        * DEPS:

2013-02-14  Dirk Pranke  <dpranke@chromium.org>
